# fiap-tech-challenge-fase-2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
scripts/: download_data.py  promote_model.py  run_pipeline.py  validate_env.py
src/recsys/: __init__.py  config.py  logging_config.py
src/recsys/data/: loader.py  splitting.py
src/recsys/evaluation/: metrics.py
src/recsys/features/: engineering.py
src/recsys/models/: baselines.py  factory.py  ncf.py  training.py
src/recsys/pipeline/: base.py  evaluate.py  feature_eng.py  preprocess.py  train.py
src/recsys/tracking/: mlflow_tracker.py  registry.py
tests/: conftest.py  test_factory.py  test_features.py  test_metrics.py  test_ncf.py  test_splitting.py
