[tool.poetry]
name = "movie-recommender"
version = "1.0.0"
description = "Sistema de recomendação de filmes (MovieLens) — NCF + baselines, DVC e MLflow"
authors = ["José Fernando Carlos <j.fernandocarlos@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "recsys", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic-settings = ">=2.0"
python-dotenv = ">=1.0"
structlog = ">=24.0"
pyyaml = ">=6.0"
pandas = ">=2.0"
numpy = ">=1.24"
pyarrow = ">=15.0"
kagglehub = ">=0.3"
scikit-learn = ">=1.3"
torch = ">=2.0"
mlflow = ">=2.10"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4"
mypy = ">=1.8"
pytest = ">=8.0"
pytest-cov = ">=5.0"
pre-commit = ">=3.6"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src", "recsys"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "smoke: testes rápidos de sanidade do pipeline e modelo",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
